--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -6,17 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="keywords"
-      content="antd,umi,umijs,ant design,Scaffolding, layout, Ant Design, project, Pro, admin, console, homepage, out-of-the-box, middle and back office, solution, component library"
+      content="word转换成pdf转换器,word转换成pdf,在线word转pdf,word转pdf免费"
     />
     <meta
       name="description"
       content="
-    An out-of-box UI solution for enterprise applications as a React boilerplate."
+        word转换成pdf转换器为广大用户提供在线word转pdf、word转pdf免费等服务，让你轻松畅游在不同版本word转换pdf中。"
     />
+      <meta
+          name="keywords"
+          content="抖音小工具,抖音视频下载,抖音视频排序"
+      />
     <meta
       name="description"
-      content="
-      Out-of-the-box mid-stage front-end/design solution."
+      content="抖音视频下载，抖音视频列表排序"
     />
     <meta
       name="viewport"
