--- a/src/pages/Alibaba/list/index.less
+++ b/src/pages/Alibaba/list/index.less
@@ -5,7 +5,10 @@
 .green {
   color: green;
 }
-
+.skuInfoMapWrapper {
+  height: 240px;
+  overflow: auto;
+}
 .skuInfoMap {
   //display: flex;
 
@@ -29,6 +32,11 @@
 
 .marginB8 {
   margin-bottom: 8px;
+}
+
+.detailGroupRowWrapper {
+  height: 240px;
+  overflow: auto;
 }
 
 .detailGroupRow {
